@@ -1,5 +1,13 @@
 2021-05-02  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/Makefile.am (MAINTAINERCLEANFILES): Add jitterc
+	generated files and add $(srcdir) prefix to lex and bison
+	generated files.
+	* poke/Makefile.am (MAINTAINERCLEANFILES): Likewise.
+	* DEV-NEWS: Add note about this.
+
+2021-05-02  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* README: Add instructions on how to offer software to the GNU
 	Project.
 
